Fix Railway orphan process issue: keep main process alive
- Replace signal-only wait with main loop that keeps process alive
- Add heartbeat ticker to show process is active
- Ensure main goroutine stays alive to prevent Railway from killing it
- Fix process lifecycle management for cloud platforms

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,3 +10,6 @@ cmds = ["go build -o netblocks-telegram-bot ./cmd/telegram-bot"]
 [start]
 cmd = "./netblocks-telegram-bot"
 
+[providers]
+railway = true
+
