--- a/config.example.json
+++ b/config.example.json
@@ -1,8 +1,10 @@
 {
   "telegram_token": "YOUR_TELEGRAM_BOT_TOKEN_HERE",
-  "telegram_channel": "YourChannelUsername",
+  "telegram_channel": "@YourChannelUsername",
   "interval": "10m",
   "ris_live_url": "wss://ris-live.ripe.net/v1/ws/?client=netblocks",
+  "cloudflare_email": "your-email@example.com",
+  "cloudflare_key": "your-cloudflare-api-key-here",
   "dns_servers": [],
   "iran_asns": []
 }
