Use GitHub Secrets for Cloudflare credentials
Changed Cloudflare API authentication to use environment variables instead
of config.json for security when deploying on GitHub Actions.

Changes:
- Updated cmd/telegram-bot/main.go to load Cloudflare credentials from env vars
- Added CLOUDFLARE_EMAIL and CLOUDFLARE_KEY environment variable support
- Updated .github/workflows/deploy.yml to pass Cloudflare secrets
- Added secret verification warnings in workflow
- Updated README with GitHub Secrets setup instructions
- Cloudflare credentials now optional - bot works without traffic charts

Configuration for GitHub Actions:
1. Go to repo → Settings → Secrets and variables → Actions
2. Add these secrets:
   - TELEGRAM_BOT_TOKEN (required)
   - TELEGRAM_CHANNEL (optional)
   - CLOUDFLARE_EMAIL (optional, for traffic charts)
   - CLOUDFLARE_KEY (optional, for traffic charts)

If Cloudflare credentials not set, bot will log a warning and continue
without traffic monitoring. All other features (BGP, DNS) work normally.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,12 @@ jobs:
         if [ -z "${{ secrets.TELEGRAM_CHANNEL }}" ]; then
           echo "Warning: TELEGRAM_CHANNEL secret not set"
         fi
+        if [ -z "${{ secrets.CLOUDFLARE_EMAIL }}" ]; then
+          echo "Warning: CLOUDFLARE_EMAIL secret not set - traffic charts will not be available"
+        fi
+        if [ -z "${{ secrets.CLOUDFLARE_KEY }}" ]; then
+          echo "Warning: CLOUDFLARE_KEY secret not set - traffic charts will not be available"
+        fi
         echo "✓ Secrets verified"
       
     - name: Build bot
@@ -49,6 +55,8 @@ jobs:
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHANNEL: ${{ secrets.TELEGRAM_CHANNEL }}
+        CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+        CLOUDFLARE_KEY: ${{ secrets.CLOUDFLARE_KEY }}
       run: |
         nohup ./netblocks-telegram-bot > bot.log 2>&1 &
         BOT_PID=$!
