Fix Cloudflare Radar API authentication - Support API Tokens
The issue was authentication method mismatch:
- User created API Token (Bearer auth)
- Code was using API Key method (X-Auth-Email/X-Auth-Key)

Changes:
- Added support for Cloudflare API Tokens (Authorization: Bearer)
- Kept backward compatibility with API Key method
- API Token is now preferred and recommended
- Updated Config struct to include CloudflareToken field
- Updated NewTrafficMonitor to accept API Token
- Modified authentication logic to prefer Bearer token over API Key
- Updated environment variable loading: CLOUDFLARE_TOKEN (new)
- Updated GitHub workflow to pass CLOUDFLARE_TOKEN secret
- Updated README with API Token setup instructions
- Updated config.example.json to use API Token

How to create Cloudflare API Token:
1. Go to https://dash.cloudflare.com/profile/api-tokens
2. Click "Create Token" → "Create Custom Token"
3. Add permission: Account → Radar → Read
4. Create token and copy it
5. Set as GitHub Secret: CLOUDFLARE_TOKEN

This fixes the authentication error and enables traffic charts!

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,11 +37,8 @@ jobs:
         if [ -z "${{ secrets.TELEGRAM_CHANNEL }}" ]; then
           echo "Warning: TELEGRAM_CHANNEL secret not set"
         fi
-        if [ -z "${{ secrets.CLOUDFLARE_EMAIL }}" ]; then
-          echo "Warning: CLOUDFLARE_EMAIL secret not set - traffic charts will not be available"
-        fi
-        if [ -z "${{ secrets.CLOUDFLARE_KEY }}" ]; then
-          echo "Warning: CLOUDFLARE_KEY secret not set - traffic charts will not be available"
+        if [ -z "${{ secrets.CLOUDFLARE_TOKEN }}" ] && [ -z "${{ secrets.CLOUDFLARE_EMAIL }}" ]; then
+          echo "Warning: CLOUDFLARE_TOKEN or CLOUDFLARE_EMAIL/KEY not set - traffic charts will not be available"
         fi
         echo "✓ Secrets verified"
       
@@ -55,6 +52,7 @@ jobs:
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHANNEL: ${{ secrets.TELEGRAM_CHANNEL }}
+        CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
         CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
         CLOUDFLARE_KEY: ${{ secrets.CLOUDFLARE_KEY }}
       run: |
