--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
         if [ -z "${{ secrets.TELEGRAM_CHANNEL }}" ]; then
           echo "Warning: TELEGRAM_CHANNEL secret not set"
         fi
-        if [ -z "${{ secrets.CLOUDFLARE_TOKEN }}" ] && [ -z "${{ secrets.CLOUDFLARE_EMAIL }}" ]; then
-          echo "Warning: CLOUDFLARE_TOKEN or CLOUDFLARE_EMAIL/KEY not set - traffic charts will not be available"
+        if [ -z "${{ secrets.CLOUDFLARE_TOKEN }}" ]; then
+          echo "Warning: CLOUDFLARE_TOKEN not set - traffic charts will not be available"
         fi
         echo "✓ Secrets verified"
       
@@ -53,8 +53,6 @@ jobs:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHANNEL: ${{ secrets.TELEGRAM_CHANNEL }}
         CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-        CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
-        CLOUDFLARE_KEY: ${{ secrets.CLOUDFLARE_KEY }}
       run: |
         nohup ./netblocks-telegram-bot > bot.log 2>&1 &
         BOT_PID=$!
@@ -63,7 +61,7 @@ jobs:
         echo "✓ Environment variables set"
         
     - name: Wait for initialization
-      run: sleep 5
+      run: sleep 10
       
     - name: Verify bot is running
       run: |
@@ -72,8 +70,10 @@ jobs:
           if kill -0 $BOT_PID 2>/dev/null; then
             echo "✓ Bot is running with PID: $BOT_PID"
             echo ""
-            echo "Recent logs:"
-            tail -20 bot.log
+            echo "============================================"
+            echo "Full startup logs (showing Cloudflare auth):"
+            echo "============================================"
+            cat bot.log
             echo ""
             echo "============================================"
             echo "Bot started successfully!"
